force-app/main/default/objects/SiebelRdsAttribute__x/SiebelRdsAttribute__x.object-meta.xml
<CustomObject>
    <description>SiebelRdsAttribute</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelRdsAttribute</externalName>
    <label>Attributi RDS Siebel</label>
    <pluralLabel>Attributi RDS Siebel</pluralLabel>
</CustomObject>