force-app/main/default/objects/SiebelRdsAttribute__x/fields/ATTRIB_05__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_05__c</fullName>
    <description>ATTRIB_05</description>
    <externalDeveloperName>ATTRIB_05</externalDeveloperName>
    <label>Rate DSMI / Istat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>