force-app/main/default/objects/SiebelRdsAttribute__x/fields/MODIFIEDDATE_AZURE__c.field-meta.xml
<CustomField>
    <fullName>MODIFIEDDATE_AZURE__c</fullName>
    <description>MODIFIEDDATE_AZURE</description>
    <externalDeveloperName>MODIFIEDDATE_AZURE</externalDeveloperName>
    <label>MODIFIEDDATE_AZURE</label>
    <type>Date</type>
</CustomField>