force-app/main/default/objects/SiebelRdsAttribute__x/fields/ROW_ID__c.field-meta.xml
<CustomField>
    <fullName>ROW_ID__c</fullName>
    <description>ROW_ID</description>
    <externalDeveloperName>ROW_ID</externalDeveloperName>
    <label>Row Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>