force-app/main/default/objects/SiebelRdsAttribute__x/fields/X_CONSUMO_ANNUO__c.field-meta.xml
<CustomField>
    <fullName>X_CONSUMO_ANNUO__c</fullName>
    <description>X_CONSUMO_ANNUO</description>
    <externalDeveloperName>X_CONSUMO_ANNUO</externalDeveloperName>
    <label>Consumo Annuo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>