force-app/main/default/objects/SiebelRdsAttribute__x/fields/X_POD_PDR__c.field-meta.xml
<CustomField>
    <fullName>X_POD_PDR__c</fullName>
    <description>X_POD_PDR</description>
    <externalDeveloperName>X_POD_PDR</externalDeveloperName>
    <label>POD/PDR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>