force-app/main/default/objects/SiebelRdsAttribute__x/fields/X_POSIZIONE_1__c.field-meta.xml
<CustomField>
    <fullName>X_POSIZIONE_1__c</fullName>
    <description>X_POSIZIONE_1</description>
    <externalDeveloperName>X_POSIZIONE_1</externalDeveloperName>
    <label>Posizione 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>