force-app/main/default/objects/SiebelRdsAttribute__x/fields/X_POSIZIONE_2__c.field-meta.xml
<CustomField>
    <fullName>X_POSIZIONE_2__c</fullName>
    <description>X_POSIZIONE_2</description>
    <externalDeveloperName>X_POSIZIONE_2</externalDeveloperName>
    <label>Posizione 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>