force-app/main/default/objects/SiebelRdsAttribute__x/fields/X_PREZZO_SCONTATO_VAS__c.field-meta.xml
<CustomField>
    <fullName>X_PREZZO_SCONTATO_VAS__c</fullName>
    <description>X_PREZZO_SCONTATO_VAS</description>
    <externalDeveloperName>X_PREZZO_SCONTATO_VAS</externalDeveloperName>
    <label>Prezzo Scontato VAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>