force-app/main/default/objects/SiebelRdsAttribute__x/fields/X_QUANTITA_VAS__c.field-meta.xml
<CustomField>
    <fullName>X_QUANTITA_VAS__c</fullName>
    <description>X_QUANTITA_VAS</description>
    <externalDeveloperName>X_QUANTITA_VAS</externalDeveloperName>
    <label>Quantità VAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>